--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>ResponsiveNav</title>
 </head>
 <body>
+    <header>
+        <nav class="topnav" id="myTopnav">
+                <a href="#home">Home</a>
+                <a href="#!home">Not Home</a>
+                <a href="#adress">Adress</a>
+                <a href="#disco">Disco</a>
+                <a href="#whatAbout">Whatabouta?</a>
+                <a href="javascript:void(0);" class="icon" onclick="dropMenu()">
+                    <i class="fa fa-bars"></i>
+                </a>
+        </nav>
+    </header>
+    <h1>Hello Responsive navbar</h1>
+
 </body>
 </html>
