added the javascript

--- a/index.html
+++ b/index.html
@@ -24,4 +24,16 @@
     <h1>Hello Responsive navbar</h1>
 
 </body>
+
+<script>
+function dropMenu() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
 </html>
