--- a/index.html
+++ b/index.html
@@ -5,27 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Actor&family=Baloo+2:wght@400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <title>ResponsiveNav</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul class="nav-list" id="myTopnav">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#!home">Not Home</a></li>
-                <li><a href="#!home">Not Home</a></li>
-                <li><a href="#!home">Not Home</a></li>
-                <li><a href="#!home">Not Home</a></li>
-                <li class="hamburger"><a href="javascript:void(0);" class="burgerLink"  onclick="dropMenu()">
-                  <div class="fa fa-bars"></div>
-                </a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1>Musician</h1>
-    
-
+  <div class="sections-container">
+    <div>
+      <header>
+          <nav>
+              <ul class="nav-list" id="myTopnav">
+                  <li><a id="logo" href="#home">Head.</a></li>
+                  <li><a href="#!home">Works</a></li>
+                  <li><a href="#!home">Services</a></li>
+                  <li><a href="#!home">Contacts</a></li>
+                  <li class="hamburger"><a href="javascript:void(0);" class="burgerLink"  onclick="dropMenu()">
+                    <div class="fa fa-bars"></div>
+                  </a></li>
+              </ul>
+          </nav>
+      </header>
+      
+      <section class="text-section">
+        <h1>Musician</h1>
+        <p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcor.</p>
+      </section>
+    </div>
+    <section class="img-section">
+      <img src="images/man-big.jpg" alt="Musician-man">
+    </section>
+  </div>
 </body>
 
 <script>
